--- a/BusPirateTerminal/BusPirateTerminal.csproj
+++ b/BusPirateTerminal/BusPirateTerminal.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{153C7FB8-65F0-4065-B492-56A2D5C6D8ED}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>MicroTerminal</RootNamespace>
-    <AssemblyName>MicroTerminal</AssemblyName>
+    <RootNamespace>BusPirateTerminal</RootNamespace>
+    <AssemblyName>BusPirateTerminal</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
