--- a/.gitignore
+++ b/.gitignore
@@ -247,13 +247,25 @@ ModelManifest.xml
 
 # User specific
 .idea/
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/shelf/*
+.idea/dictionaries
 
-*.suo
-*.user
-.vs/
-[Bb]in/
-[Oo]bj/
-_UpgradeReport_Files/
+# Sensitive or high-churn files
+.idea/**/dataSources/
+.idea/**/dataSources.ids
+.idea/**/dataSources.xml
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+
+# Rider
+# Rider auto-generates .iml files, and contentModel.xml
+.idea/**/*.iml
+.idea/**/contentModel.xml
+.idea/**/modules.xml
+
 [Pp]ackages/
 
 Thumbs.db
